First functional html interface

--- a/presentation.html
+++ b/presentation.html
@@ -11,7 +11,7 @@
 
         <p id="paragrafo"></p>
 
-        <canvas id="canvas" width="200" height="100"></canvas>
+        <canvas id="canvas" width="500" height="500" style="border:1px solid #000000;"></canvas>
 
         <script src="presentation.js"></script>
         <!-- Bootstrap core JS-->
