Fixing bootstrap imports

--- a/presentation.html
+++ b/presentation.html
@@ -6,16 +6,39 @@
         <meta name="description" content="ALife Showcase" />
         <meta name="author" content="Petrônio Cândido de Lima e Silva" />
         <title>ALife Showcase </title>
+
+        <!-- jQUERY & BOOTSTRAP -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body id="page-top">
+        <div class="bs-example bs-example-tabs">
+            <ul class="nav nav-tabs" id="maintab"  role=tablist>
+                <li role="presentation" class="active"><a href="#home" role=tab id=home-tab>Geral</a></li>
+                <li role="presentation"><a href="#sierpinski"  role=tab id=sierpinski-tab>Sierpinski</a></li>
+                <li role="presentation"><a href="#conway" role=tab id=conway-tab> Conway</a></li>
+            </ul>
 
-        <p id="paragrafo"></p>
+            <div class="tab-content" id=maintabcontent>
+                <div class="tab-pane  fade in active" id="home" role="tabpanel" aria-labelledby="home-tab">Geral</div>
+                <div class="tab-pane fade" id="sierpinski" role="tabpanel" aria-labelledby="sierpinski-tab">sierpinski</div>
+                <div class="tab-pane fade" id="conway" role="tabpanel" aria-labelledby="conway-tab">conway</div>
+            </div>
+        </div>
+          
 
         <canvas id="canvas" width="500" height="500" style="border:1px solid #000000;"></canvas>
 
+        <script>
+            $('#maintab a').click(function (e) {
+                e.preventDefault()
+                $(this).tab('show')
+                })
+        </script>
+
+        
         <script src="presentation.js"></script>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
 
     </body>
 
