--- a/presentation/web/view.html
+++ b/presentation/web/view.html
@@ -24,6 +24,12 @@
         <div class="tab-content" id=maintabcontent>
             <div class="tab-pane fade" id="sierpinski" role="tabpanel" aria-labelledby="sierpinski-tab">
                 <h3>Sierpinski Triangle</h3>
+                <form>
+                    <div class="form-group">
+                        <label for="sierpinskiWidth">Width:</label><span id="lblsierpinskiWidth"></span>
+                        <input type="range" class="custom-range" min="10" max="50" id="sierpinskiWidth">
+                    </div>
+                </form>
                 <button class="btn btn-primary" id="run_sierpinski">Run</button>
             </div>
             <div class="tab-pane fade" id="conway" role="tabpanel" aria-labelledby="conway-tab">
@@ -37,17 +43,17 @@
                         <label for="caHeight">Height:</label><span id="lblcaHeight"></span>
                         <input type="range" class="custom-range" min="10" max="50" id="caHeight">
                     </div>
-                    
+
                 </form>
                 <button class="btn btn-primary" id="run_conway">Run</button>
-                
+
             </div>
         </div>
     </div>
 
-<div>
-    <canvas id="canvas" width="500" height="500" style="border:1px solid #000000;"></canvas>
-</div>
+    <div style="text-align: center">
+        <canvas id="canvas" width="500" height="500" style="display: block; border:1px solid #000000;"></canvas>
+    </div>
 
     <script>
         $('#maintab a').click(function (e) {
@@ -57,7 +63,7 @@
     </script>
 
 
-    <script src="presentation.js"></script>
+    <script src="controller.js"></script>
 
 </body>
 
