--- a/presentation/web/view.html
+++ b/presentation/web/view.html
@@ -19,6 +19,7 @@
         <ul class="nav nav-tabs" id="maintab" role=tablist>
             <li role="presentation"><a href="#sierpinski" role=tab id=sierpinski-tab>Sierpinski</a></li>
             <li role="presentation"><a href="#conway" role=tab id=conway-tab> Conway</a></li>
+            <li role="presentation"><a href="#percolation" role=tab id=percolation-tab>Percolation</a></li>
         </ul>
 
         <div class="tab-content" id=maintabcontent>
@@ -46,6 +47,22 @@
 
                 </form>
                 <button class="btn btn-primary" id="run_conway">Run</button>
+
+            </div>
+            <div class="tab-pane fade" id="percolation" role="tabpanel" aria-labelledby="conway-tab">
+                <h3>Conway's Game of Life</h3>
+                <form>
+                    <div class="form-group">
+                        <label for="percoWidth">Width:</label><span id="lblpercoWidth"></span>
+                        <input type="range" class="custom-range" min="10" max="50" id="percoWidth">
+                    </div>
+                    <div class="form-group">
+                        <label for="percoHeight">Height:</label><span id="lblpercoHeight"></span>
+                        <input type="range" class="custom-range" min="10" max="50" id="percoHeight">
+                    </div>
+
+                </form>
+                <button class="btn btn-primary" id="run_percolation">Run</button>
 
             </div>
         </div>
