--- a/presentation/web/view.html
+++ b/presentation/web/view.html
@@ -50,7 +50,7 @@
 
             </div>
             <div class="tab-pane fade" id="percolation" role="tabpanel" aria-labelledby="conway-tab">
-                <h3>Conway's Game of Life</h3>
+                <h3>Percolation Process</h3>
                 <form>
                     <div class="form-group">
                         <label for="percoWidth">Width:</label><span id="lblpercoWidth"></span>
