--- a/presentation/web/view.html
+++ b/presentation/web/view.html
@@ -42,6 +42,10 @@
             </div>
             <div class="tab-pane fade" id="sierpinski" role="tabpanel" aria-labelledby="sierpinski-tab">
                 <h3>Sierpinski Triangle</h3>
+                <p id="teste"></p>
+                <select class="form-select" id="CellularAutomata1D">
+                    
+                  </select>
 
                 <button class="btn btn-primary" id="run_sierpinski">Run</button>
             </div>
