--- a/presentation/web/view.html
+++ b/presentation/web/view.html
@@ -30,11 +30,11 @@
                 <form>
                     <div class="form-group">
                         <label for="caWidth">Width:</label><span id="lblcaWidth"></span>
-                        <input type="range" class="custom-range" min="10" max="50" id="caWidth">
+                        <input type="range" class="custom-range" min="10" max="100" id="caWidth">
                     </div>
                     <div class="form-group">
                         <label for="caHeight">Height:</label><span id="lblcaHeight"></span>
-                        <input type="range" class="custom-range" min="10" max="50" id="caHeight">
+                        <input type="range" class="custom-range" min="10" max="100" id="caHeight">
                     </div>
 
                 </form>
@@ -47,18 +47,21 @@
                     
                   </select>
 
-                <button class="btn btn-primary" id="run_sierpinski">Run</button>
+                <button class="btn btn-primary" id="run_sierpinski">Start</button>
+                <button class="btn btn-primary" id="stop_sierpinski">Stop</button>
             </div>
             <div class="tab-pane fade" id="conway" role="tabpanel" aria-labelledby="conway-tab">
                 <h3>Conway's Game of Life</h3>
 
                 <button class="btn btn-primary" id="run_conway">Run</button>
+                <button class="btn btn-primary" id="stop_conway">Stop</button>
 
             </div>
             <div class="tab-pane fade" id="percolation" role="tabpanel" aria-labelledby="percolation-tab">
                 <h3>Percolation Process</h3>
 
-                <button class="btn btn-primary" id="run_percolation">Run</button>
+                <button class="btn btn-primary" id="run_percolation">Start</button>
+                <button class="btn btn-primary" id="stop_percolation">Stop</button>
 
             </div>
             <div class="tab-pane fade" id="oscillator" role="tabpanel" aria-labelledby="oscillator-tab">
@@ -168,7 +171,8 @@
 
                 </form>
 
-                <button class="btn btn-primary" id="run_oscillator">Run</button>
+                <button class="btn btn-primary" id="run_oscillator">Start</button>
+                <button class="btn btn-primary" id="stop_oscillator">Stop</button>
 
             </div>
         </div>
