Bugfixes in BoidSimulation and improvements at presentation

--- a/presentation/web/boids.html
+++ b/presentation/web/boids.html
@@ -21,6 +21,19 @@
             <li>Boids</li>
           </ol>
 
+          <form>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="num_boids">Number of Boids:</label><span id="lbl_num_boids"></span>
+                    <input type="range" class="custom-range" min="10" max="200" id="num_boids">
+                    <label for="velocity">Velocity:</label><span id="lbl_velocity"></span>
+                    <input type="range" class="custom-range" min="1" max="50" id="velocity">
+                    <label for="radius">Neighborhood Radius:</label><span id="lbl_radius"></span>
+                    <input type="range" class="custom-range" min="2" max="50" id="radius">
+                </div>
+            </div>
+          </form>
+
           <button class="btn btn-primary" id="run_boids">Start</button>
           <button class="btn btn-primary" id="stop_boids">Stop</button>
         
