First fully functional version of Boids

--- a/presentation/web/boids.html
+++ b/presentation/web/boids.html
@@ -26,8 +26,10 @@
                 <div class="form-group col-md-6">
                     <label for="num_boids">Number of Boids:</label><span id="lbl_num_boids"></span>
                     <input type="range" class="custom-range" min="10" max="200" id="num_boids">
+                    <label for="momentum">Momentum:</label><span id="lbl_momentum"></span>
+                    <input type="range" class="custom-range" value="20" min="1" max="50" id="momentum">
                     <label for="velocity">Velocity:</label><span id="lbl_velocity"></span>
-                    <input type="range" class="custom-range" min="1" max="50" id="velocity">
+                    <input type="range" class="custom-range" value="5" min="1" max="20" id="velocity">
                     <label for="radius">Neighborhood Radius:</label><span id="lbl_radius"></span>
                     <input type="range" class="custom-range" min="2" max="50" id="radius">
                 </div>
