--- a/presentation/web/ca.html
+++ b/presentation/web/ca.html
@@ -23,8 +23,8 @@
     <div class="bs-example bs-example-tabs">
         <ul class="nav nav-tabs" id="maintab" role=tablist>
             <li role="presentation"><a href="#general" role=tab id=general-tab>General</a></li>
-            <li role="presentation"><a href="#sierpinski" role=tab id=sierpinski-tab>Sierpinski</a></li>
-            <li role="presentation"><a href="#conway" role=tab id=conway-tab> Conway</a></li>
+            <li role="presentation"><a href="#sierpinski" role=tab id=sierpinski-tab>1D</a></li>
+            <li role="presentation"><a href="#conway" role=tab id=conway-tab> 2D</a></li>
             <li role="presentation"><a href="#percolation" role=tab id=percolation-tab>Percolation</a></li>
             <li role="presentation"><a href="#oscillator" role=tab id=oscillator-tab>Oscillator</a></li>
         </ul>
@@ -46,7 +46,7 @@
 
             </div>
             <div class="tab-pane fade" id="sierpinski" role="tabpanel" aria-labelledby="sierpinski-tab">
-                <h3>Sierpinski Triangle</h3>
+                <h3>1D Cellular Automata</h3>
                 <p id="teste"></p>
                 <select class="form-select" id="CellularAutomata1D">
                     
@@ -184,7 +184,7 @@
     </div>
 
     <div style="text-align: center">
-        <canvas id="canvas" width="500" height="500" style="display: block; border:1px solid #000000;"></canvas>
+        <canvas id="canvas" width="1000" height="500" style="display: block; border:1px solid #000000;"></canvas>
     </div>
 
     <script>
