--- a/presentation/web/view.html
+++ b/presentation/web/view.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="ALife Showcase" />
+    <meta name="application-name" content="ALife Showcase" />
+    <meta name="description" content="A web frontend for ALife package dor Dart language" />
     <meta name="author" content="Petrônio Cândido de Lima e Silva" />
     <title>ALife Showcase </title>
 
